--- a/views/user/editinfo.handlebars
+++ b/views/user/editinfo.handlebars
@@ -35,5 +35,5 @@
         <input name="salary" type="type" value="{{user.salary}}" />
     </div>
     <br>
-    <input name="submit" type="submit" />
+    <input name="submit" type="submit" value="Save Changes" />
 </form>
