--- a/views/user/register.handlebars
+++ b/views/user/register.handlebars
@@ -1,19 +1,16 @@
 <h1>Registration</h1>
 <form class="userRegistrationForm" method="POST" action="/user">
     <div class="userAttribute">
-        Name:
-        <input name="name" type="name" />
+        <input name="name" type="name" placeholder="Name" />
     </div>
     <div class="userAttribute">
-        Email:
-        <input name="email" type="email" />
+        <input name="email" type="email" placeholder="Email" />
     </div>
     {{#if duplicateEmail}}
     <p class="errorMessage">This email is already taken.</p>
     {{/if}}
     <div class="userAttribute">
-        Password:
-        <input name="password" type="password" />
+        <input name="password" type="password" placeholder="Password" />
     </div>
     <input name="submit" type="submit" />
 </form>
