--- a/views/user/editinfo.handlebars
+++ b/views/user/editinfo.handlebars
@@ -1,5 +1,6 @@
 <h1>Update Personal Information</h1>
-<form class="userUpdateForm" method="POST" action="/user/{{user.id}}?_method=PUT">
+
+<form class="userForm" method="POST" action="/user/{{user.id}}?_method=PUT">
     <div class="userAttribute">
         Account Number:
         <input name="accountNumber" type="type" value="{{user.id}}" readonly />
