--- a/views/user/budget.handlebars
+++ b/views/user/budget.handlebars
@@ -5,6 +5,7 @@
         <th>Category</th>
         <th>Budget</th>
         <th> </th>
+        <th> </th>
     </tr>
     {{#each budget}}
     <tr>
@@ -12,7 +13,12 @@
         <td>{{this.budget}}</td>
         <td>
             <form method="GET" action="/user/budget/{{this.users_id}}/edit/{{this.category}}">
-                <input name="submit" type="submit" value="Edit" />
+                <input name="edit" type="submit" value="Edit" />
+            </form>
+        </td>
+        <td>
+            <form method="POST" action="/user/budget/{{this.users_id}}/delete/{{this.category}}?_method=DELETE">
+                <input name="delete" type="submit" value="Delete" />
             </form>
         </td>
     </tr>
