added css element stage 1

--- a/views/user/budget.handlebars
+++ b/views/user/budget.handlebars
@@ -43,4 +43,5 @@
     </div>
     <br>
     <input name="submit" type="submit" value="Add" />
+    <button><a class="backButton" href="/user/dashboard/">Back</a></button>
 </form>
