--- a/views/user/editexpense.handlebars
+++ b/views/user/editexpense.handlebars
@@ -28,5 +28,6 @@
     </div>
     <br>
     <input name="submit" type="submit" value="Save Changes" />
+    <button><a class="backButton" href="/user/dashboard/">Back</a></button>
     {{/each}}
 </form>
