--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,113 @@
 header {
-    background-color: lightskyblue;
+    background-color: rgba(160, 248, 253, 0.4);
+    text-align: center;
 }
+
 footer {
-    background-color: lightseagreen;
+    background-color: rgba(128, 128, 128, 0.8);
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    height: 30px;
+}
+
+img {
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.6;
+}
+table {
+    border: solid black;
+    width: 50%;
+    text-align: center;
+}
+.dashboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.dbButton {
+    height: 200px;
+    width: 200px;
+    border-radius: 20px;
+    background-color: rgba(139, 169, 171, 0.5);
+    font-size: 38px;
+}
+#friends {
+    display: none;
+}
+.nav {
+    display: inline-flex;
+    justify-content: center;
+    align-content: space-around;
+}
+.homeButton {
+    margin: 0 10px;
+    background: none;
+    border: none;
+    color: blue;
+}
+.homeButton:hover {
+    text-decoration: underline;
+}
+.backButton {
+    color: black;
+}
+.backButton:hover {
+    color: black;
+}
+.homepage {
+    padding: 60px;
+    text-align: center;
+}
+.inputHomepage {
+    text-align: center;
+    background: none;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid black;
+    padding: 10px;
+    font-size: 28px;
+}
+.loginButton {
+    margin: 10px;
+    width: 180px;
+    font-size: 20px;
+    border-radius: 25px;
+    background-color: rgb(224, 155, 86);
+    border: none;
+}
+.signupButton {
+    width: 180px;
+    margin-top: 0;
+    font-size: 20px;
+    border-radius: 25px;
+    background-color: rgb(164, 155, 146);
+    border: none;
+}
+#notAMember {
+    border-top: dotted black;
+    margin: 20px 0 5px 0;
+    font-size: 20px;
+}
+::placeholder {
+    /* Chrome, Firefox, Opera, Safari 10.1+ */
+    color: rgba(2, 2, 2, 0.8);
+    opacity: 1;
+    /* Firefox */
+}
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: rgba(2, 2, 2, 0.8);
+}
+::-ms-input-placeholder {
+    /* Microsoft Edge */
+    color: rgba(2, 2, 2, 0.8);
 }
