--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="/style.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
     <title>Zallet</title>
 </head>
+
 <body>
-        <header>
-            <span><a href="/">Home</a></span>
-            <span><a href="#">Personal</a></span>
-            <span><a href="#">Business</a></span>
-        </header>
-        {{{body}}}
-        <footer>
-            <p>Copyright@JerryPan</p>
-        </footer>
+    <img src="https://imgur.com/2l46hqf.jpg" alt="city view">
+    <header>
+        <h1>Pro Zallet | More than a tracker</h1>
+        {{#if loggedIn}}
+            <div class="nav">
+                <form class="navButton" method="GET" action="/user/dashboard">
+                    <button class="homeButton" type="submit">Home</button>
+                </form>
+                <form class="navButton" method="POST" action="/user/logout">
+                    <button class="homeButton" type="submit">Logout</button>
+                </form>
+            </div> 
+            {{else}}
+                <span>
+                    <a href="/">Home</a>
+                </span>
+        {{/if}}
+    </header>
+    {{{body}}}
+    <footer>
+        <p>Copyright@JerryPan</p>
+    </footer>
 </body>
+
 </html>
