--- a/views/user/expense.handlebars
+++ b/views/user/expense.handlebars
@@ -57,4 +57,5 @@
     </div>
     <br>
     <input name="submit" type="submit" value="Add" />
+    <button><a class="backButton" href="/user/dashboard/">Back</a></button>
 </form>
